--- a/index.html
+++ b/index.html
@@ -1,5 +1,119 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
 ---
+<section class="carousel-top">
+	<div class="top">
+		<div class="container">
+			<p class="t0">Infrastructure for the Decentralized Future</p>
+		</div>
+		<div class="container">
+			<div class="col-3"><p class="t1">Mainnet Validators</p><a>3</a>
+			</div>
+			<div class="col-3"><p class="t1">Testnet Validators</p><a>5</a>
+			</div>
+			<div class="col-3"><p class="t1">Blockchain Full Nodes</p><a>3</a>
+			</div>
+			<div class="col-3"><p class="t1">Decentralized Web Services</p><a>1</a>
+			</div>
+			
+		</div>
+	</div>
+	<div class="proof">
+		<div class="proof-right"></div>
+		<div class="proof-left">
+			<a class="p-01">We are</a><br><p class="p-02">Proof of Stake Validators</p>
+			<div class="stake">
+				<a class="t2">Assets Staked With Us:</a><a class="t3">$56,183,665.29</a>
+				<a href="network.html"><button class="stake-btn">Stake</button></a>
+			</div>
+			<a class="t4">We run high availability secure cryptographic signing nodes to validate some of the largest Proof of Stake blockchains.  We translate our intimate technical knowledge of PoS systems into high quality operational validators.</a>
+		</div>	
+	</div>
+	<div class="Validators">
+		<h1>Validators</h1>
+		<div class="col-2">
+			<span class="online"></span>
+			<div class="m1">
+				<div class="icon icon_c"></div>
+				<a class="t5">Cosmos</a><br><a class="t6">Average Yield 7% - 20%</a>
+			</div>
+			<a href="network.html"><button class="Delegate-btn">Delegate</button></a>
+		</div>
+		<div class="col-2">
+			<span class="online"></span>
+			<div class="m1">
+				<div class="icon icon_k"></div>
+				<a class="t5">Kava</a><br><a class="t6">Average Yield 7% - 20%</a>
+			</div>
+			<a href="network.html"><button class="Delegate-btn">Delegate</button></a>
+		</div>
+		<div class="col-2">
+			<span class="online"></span>
+			<div class="m1">
+				<div class="icon icon_s"></div>
+				<a class="t5">Straightedge</a><br><a class="t6">Average Yield 7% - 20%</a>
+			</div>
+			<a href="network.html"><button class="Delegate-btn">Delegate</button></a>
+		</div>
+		<div class="col-2">
+			<span class="online"></span>
+			<div class="m1">
+				<div class="icon icon_a"></div>
+				<a class="t5">Akash</a><br><a class="t6">Average Yield 7% - 20%</a>
+			</div>
+			<a href="network.html"><button class="Delegate-btn">Delegate</button></a>
+		</div>
+		<div class="col-2">
+			<span class="online"></span>
+			<div class="m1">
+				<div class="icon icon_p"></div>
+				<a class="t5">Persistence</a><br><a class="t6">Average Yield 7% - 20%</a>
+			</div>
+			<a href="network.html"><button class="Delegate-btn">Delegate</button></a>
+		</div>
+	</div>
+	<div class="proof dwi">
+		<div class="proof-right"></div>
+		<div class="proof-left">
+			<a class="p-01">We offer</a><br><p class="p-02">Decentralized Web Infrastructure</p>
+			<a class="t4">We are committed to building and running any protocols that move forward the vision of decentralization, including blockchain full nodes, IPFS nodes, Tor relays, ILP connectors, and mesh network routers.</a>
+		</div>	
+	</div>
+	<div class="proof wb">
+		<div class="proof-right"></div>
+		<div class="proof-left">
+			<a class="p-01">We build</a><br><p class="p-02">Open Source Tooling</p>
+			<a class="t4">We build open source tooling around blockchains, PoS, and validation.  Currently, our primary contribution has been to Tendermint Core, the consensus engine that powers many blockchains both in and outside the Cosmos ecosystem.</a>
+		</div>	
+	</div>
+	<div class="Validators dp">
+		<h1>Development Projects</h1>
+		<div class="col-2">
+			<div class="m1">
+				<div class="icon icon_c"></div>
+				<a class="t5">Cosmos Core Development</a>
+			</div>
+			<a href="Projects.html"><button class="Delegate-btn">Learn more</button></a>
+		</div>
+		<div class="col-2">
+			<div class="m1">
+				<div class="icon icon_c"></div>
+				<a class="t5">Straightedge Launch</a>
+			</div>
+			<a href="Projects.html"><button class="Delegate-btn">Learn more</button></a>
+		</div>
+		<div class="col-2">
+			<div class="m1">
+				<div class="icon icon_c"></div>
+				<a class="t5">zkDEX<br>Research</a>
+			</div>
+			<a href="Projects.html"><button class="Delegate-btn">Learn more</button></a>
+		</div>
+	</div>
+	<div class="Validators pa">
+		<h1>Partners<br>& Advisors</h1>
+		<img src="img/pa-logo-01.png"/>
+		<img src="img/pa-logo-02.png"/>
+		<img src="img/pa-logo-03.png"/>
+		
+	</div>
