--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ layout: home
 	</div>
 	<div class="Validators pa">
 		<h1>Partners<br>& Advisors</h1>
-		<img src="img/pa-logo-01.png"/>
-		<img src="img/pa-logo-02.png"/>
-		<img src="img/pa-logo-03.png"/>
+		<img src="{{ '' | absolute_url }}/assets/img/pa-logo-01.png"/>
+		<img src="{{ '' | absolute_url }}/assets/img/pa-logo-02.png"/>
+		<img src="{{ '' | absolute_url }}/assets/img/pa-logo-03.png"/>
 		
 	</div>
