--- a/about.html
+++ b/about.html
@@ -69,15 +69,15 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 			</div>
 			<div class="dialog-body">
 				<div class="dialog-text">
-					<img class="user-face" src="img/picture.png" alt="">
+					<img class="user-face" src="{{ '' | absolute_url }}/assets/img/picture.png" alt="">
 					<h1>Sunny <br><em>Aggarwal</em></h1>
 					<div class="social">
-						<a href=""><img class="team-icon" src="img/Icon-email.png"></a>
-						<a href=""><img class="team-icon" src="img/Icon-Twitter.png"></a>
-						<a href=""><img class="team-icon" src="img/Icon-keybase.png"></a>
-						<a href=""><img class="team-icon" src="img/Icon-GitHub.png"></a>
-						<a href=""><img class="team-icon" src="img/Icon-LinkedIn.png"></a>
-						<a href=""><img class="team-icon" src="img/Icon-webpage.png"></a>
+						<a href=""><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-email.png"></a>
+						<a href=""><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-Twitter.png"></a>
+						<a href=""><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-keybase.png"></a>
+						<a href=""><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-GitHub.png"></a>
+						<a href=""><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-LinkedIn.png"></a>
+						<a href=""><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-webpage.png"></a>
 					</div>
 					<p>Sunny has been involved with the blockchain space since 2015.  He is a core developer and researcher on the Tendermint/Cosmos projects, focusing on Proof of Stake and blockchain interoperability.  He also serves as an advisor/cofounder of Blockchain at Berkeley and co-hosts the Epicenter Podcast, one of the largest crypto podcasts with over 50K weekly listeners.</p>
 					
