--- a/community.html
+++ b/community.html
@@ -6,23 +6,71 @@ layout: base
 	<h1>Latest Articles</h1>
 	<p>Read the latest news, features and announcements from the Sikka Blog and around the web.</p>
 	<div class="col-2">
-		<img src="img/lastes-img.png">
+		<img src="{{ '' | absolute_url }}/assets/img/lastes-img.png">
 		<h2>Aricle title here</h2>
 		<p>The Cosmos Hub is an Internet of Blockchains, a network of blockchains able to communicate with each other in a decentralized way.</p>
 		<dt>Kevin Cheng <br>Sep 20</dt>
 		
 	</div>
 	<div class="col-2">
-		<img src="img/lastes-img.png">
+		<img src="{{ '' | absolute_url }}/assets/img/lastes-img.png">
 		<h2>Long title text here: Extended Support for the Cosmos Hub</h2>
 		<p>The Cosmos Hub is an Internet of Blockchains, a network of blockchains able to communicate The Cosmos Hub is an Internet of Blockchains, a network of blockchains able to communicate</p>
 		<dt>Kevin Cheng <br>Sep 20</dt>
 	</div>
 	<div class="col-2">
-		<img src="img/lastes-img.png">
+		<img src="{{ '' | absolute_url }}/assets/img/lastes-img.png">
 		<h2>Aricle title here</h2>
 		<p>The Cosmos Hub is an Internet of Blockchains, a network of blockchains able to communicate with each other in a decentralized way.</p>
 		<dt>Kevin Cheng <br>Sep 20</dt>
 	</div>
 </div>
+
+	
+<div class="community">
+	<a href="">
+		<img src="{{ '' | absolute_url }}/assets/img/community-img.png"/>
+		<h1>Community</h1>
+		<p>Connect with an open community all over the world</p>
+	</a>
+</div>
+<div class="platform">
+	<div class="col-2">
+		<div class="twitter"></div>
+		<div class="link">
+			
+			<a href=""><div class="btn"><bm>Sikka</bm><i class="right"></i></div></a>
+			<a href=""><div class="btn"><bm>Straightedge</bm><i class="right"></i></div></a>
+		</div>
+	</div>
+	<div class="col-2">
+		<div class="telegram"></div>
+		<div class="link">
+			<a href=""><div class="btn"><bm>Sikka</bm><i class="right"></i></div></a>
+			<a href=""><div class="btn"><bm>Straightedge</bm><i class="right"></i></div></a>
+		</div>
+	</div>
+	<div class="col-2">
+		<div class="big-icon"></div>
+		<div class="link">
+			<a href=""><div class="btn"><bm>Straightedge</bm><i class="right"></i></div></a>
+		</div>
+	</div>
+	<div class="col-2">
+		<div class="keybase"></div>
+		<div class="link">
+			<a href=""><div class="btn"><bm>Sikka</bm><i class="right"></i></div></a>
+			<a href=""><div class="btn"><bm>Straightedge</bm><i class="right"></i></div></a>
+		</div>
+	</div>
+	<div class="col-2">
+		<div class="gitHub"></div>
+		<div class="link">
+			<a href=""><div class="btn"><bm>Sikka</bm><i class="right"></i></div></a>
+			<a href=""><div class="btn"><bm>Cosmos SDK</bm><i class="right"></i></div></a>
+			<a href=""><div class="btn"><bm>Straightedge</bm><i class="right"></i></div></a>
+		</div>
+	</div>
+</div>
+
 
