--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: home
 			<a class="p-01">We are</a><br><p class="p-02">Proof of Stake Validators</p>
 			<div class="stake">
 				<a class="t2">Assets Staked With Us:</a><a class="t3">$56,183,665.29</a>
-				<a href="{{ '' | absolute_url }}/network"><button class="stake-btn">Stake</button></a>
+				<a href="{{ '' | absolute_url }}/network/"><button class="stake-btn">Stake</button></a>
 			</div>
 			<a class="t4">We run high availability secure cryptographic signing nodes to validate some of the largest Proof of Stake blockchains.  We translate our intimate technical knowledge of PoS systems into high quality operational validators.</a>
 		</div>	
@@ -37,7 +37,7 @@ layout: home
 				<div class="icon icon_c"></div>
 				<a class="t5">Cosmos</a><br><a class="t6">Average Yield 7% - 20%</a>
 			</div>
-			<a href="{{ '' | absolute_url }}/network"><button class="Delegate-btn">Delegate</button></a>
+			<a href="{{ '' | absolute_url }}/network/"><button class="Delegate-btn">Delegate</button></a>
 		</div>
 		<div class="col-2">
 			<span class="online"></span>
@@ -45,7 +45,7 @@ layout: home
 				<div class="icon icon_k"></div>
 				<a class="t5">Kava</a><br><a class="t6">Average Yield 7% - 20%</a>
 			</div>
-			<a href="{{ '' | absolute_url }}/network"><button class="Delegate-btn">Delegate</button></a>
+			<a href="{{ '' | absolute_url }}/network/"><button class="Delegate-btn">Delegate</button></a>
 		</div>
 		<div class="col-2">
 			<span class="online"></span>
@@ -53,7 +53,7 @@ layout: home
 				<div class="icon icon_s"></div>
 				<a class="t5">Straightedge</a><br><a class="t6">Average Yield 7% - 20%</a>
 			</div>
-			<a href="{{ '' | absolute_url }}/network"><button class="Delegate-btn">Delegate</button></a>
+			<a href="{{ '' | absolute_url }}/network/"><button class="Delegate-btn">Delegate</button></a>
 		</div>
 		<div class="col-2">
 			<span class="online"></span>
@@ -61,7 +61,7 @@ layout: home
 				<div class="icon icon_a"></div>
 				<a class="t5">Akash</a><br><a class="t6">Average Yield 7% - 20%</a>
 			</div>
-			<a href="{{ '' | absolute_url }}/network"><button class="Delegate-btn">Delegate</button></a>
+			<a href="{{ '' | absolute_url }}/network/"><button class="Delegate-btn">Delegate</button></a>
 		</div>
 		<div class="col-2">
 			<span class="online"></span>
@@ -69,7 +69,7 @@ layout: home
 				<div class="icon icon_p"></div>
 				<a class="t5">Persistence</a><br><a class="t6">Average Yield 7% - 20%</a>
 			</div>
-			<a href="{{ '' | absolute_url }}/network"><button class="Delegate-btn">Delegate</button></a>
+			<a href="{{ '' | absolute_url }}/network/"><button class="Delegate-btn">Delegate</button></a>
 		</div>
 	</div>
 	<div class="proof dwi">
@@ -93,21 +93,21 @@ layout: home
 				<div class="icon icon_c"></div>
 				<a class="t5">Cosmos Core Development</a>
 			</div>
-			<a href="{{ '' | absolute_url }}/projects"><button class="Delegate-btn">Learn more</button></a>
+			<a href="{{ '' | absolute_url }}/projects/"><button class="Delegate-btn">Learn more</button></a>
 		</div>
 		<div class="col-2">
 			<div class="m1">
 				<div class="icon icon_c"></div>
 				<a class="t5">Straightedge Launch</a>
 			</div>
-			<a href="{{ '' | absolute_url }}/projects"><button class="Delegate-btn">Learn more</button></a>
+			<a href="{{ '' | absolute_url }}/projects/"><button class="Delegate-btn">Learn more</button></a>
 		</div>
 		<div class="col-2">
 			<div class="m1">
 				<div class="icon icon_c"></div>
 				<a class="t5">zkDEX<br>Research</a>
 			</div>
-			<a href="{{ '' | absolute_url }}/projects"><button class="Delegate-btn">Learn more</button></a>
+			<a href="{{ '' | absolute_url }}/projects/"><button class="Delegate-btn">Learn more</button></a>
 		</div>
 	</div>
 	<div class="Validators pa">
