--- a/networks.html
+++ b/networks.html
@@ -7,11 +7,11 @@ layout: base
 	<div class="menu">
 		<h3><i class="q-menu-img positionIicon"></i>Networks</h3>
 		<ul class="ulmenu1">
-			<li><a class="selected" href="#"><span class="cosmos">Cosmos</span></a></li>
-			<li><a href="#"><span class="kava">Kava</span></a></li>
-			<li><a href="#"><span class="straightedge">Straightedge</span></a></li>
-			<li><a href="#"><span class="akash">Akash</span></a></li>
-			<li><a href="#"><span class="persistence">Persistence</span></a></li>
+			<li><a class="selected" href="#Cosmos"><span class="cosmos">Cosmos</span></a></li>
+			<li><a href="#Kava"><span class="kava">Kava</span></a></li>
+			<li><a href="#Straightedge"><span class="straightedge">Straightedge</span></a></li>
+			<li><a href="#Akash"><span class="akash">Akash</span></a></li>
+			<li><a href="#Persistence"><span class="persistence">Persistence</span></a></li>
 		</ul>
 	</div>
 	
