--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: home
 				<div class="icon icon_c"></div>
 				<a class="t5">Cosmos</a><br><a class="t6">Average Yield 7% - 20%</a>
 			</div>
-			<a href="{{ '' | absolute_url }}/networks/"><button class="Delegate-btn">Delegate</button></a>
+			<a href="{{ '' | absolute_url }}/networks/#Cosmos"><button class="Delegate-btn">Delegate</button></a>
 		</div>
 		<div class="col-2">
 			<span class="online"></span>
@@ -45,7 +45,7 @@ layout: home
 				<div class="icon icon_k"></div>
 				<a class="t5">Kava</a><br><a class="t6">Average Yield 7% - 20%</a>
 			</div>
-			<a href="{{ '' | absolute_url }}/networks/"><button class="Delegate-btn">Delegate</button></a>
+			<a href="{{ '' | absolute_url }}/networks/#Kava"><button class="Delegate-btn">Delegate</button></a>
 		</div>
 		<div class="col-2">
 			<span class="online"></span>
@@ -53,7 +53,7 @@ layout: home
 				<div class="icon icon_s"></div>
 				<a class="t5">Straightedge</a><br><a class="t6">Average Yield 7% - 20%</a>
 			</div>
-			<a href="{{ '' | absolute_url }}/networks/"><button class="Delegate-btn">Delegate</button></a>
+			<a href="{{ '' | absolute_url }}/networks/#Straightedge"><button class="Delegate-btn">Delegate</button></a>
 		</div>
 		<div class="col-2">
 			<span class="online"></span>
@@ -61,7 +61,7 @@ layout: home
 				<div class="icon icon_a"></div>
 				<a class="t5">Akash</a><br><a class="t6">Average Yield 7% - 20%</a>
 			</div>
-			<a href="{{ '' | absolute_url }}/networks/"><button class="Delegate-btn">Delegate</button></a>
+			<a href="{{ '' | absolute_url }}/networks/#Akash"><button class="Delegate-btn">Delegate</button></a>
 		</div>
 		<div class="col-2">
 			<span class="online"></span>
@@ -69,7 +69,7 @@ layout: home
 				<div class="icon icon_p"></div>
 				<a class="t5">Persistence</a><br><a class="t6">Average Yield 7% - 20%</a>
 			</div>
-			<a href="{{ '' | absolute_url }}/networks/"><button class="Delegate-btn">Delegate</button></a>
+			<a href="{{ '' | absolute_url }}/networks/#Persistence"><button class="Delegate-btn">Delegate</button></a>
 		</div>
 	</div>
 	<div class="proof dwi">
