--- a/community.html
+++ b/community.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 ---
-
+{{ content }}
 <div class="latest-articles">
 	<h1>Latest Articles</h1>
 	<p>Read the latest news, features and announcements from the Sikka Blog and around the web.</p>
