--- a/networks.html
+++ b/networks.html
@@ -47,7 +47,7 @@ layout: base
 				<div class="link2">
 			
 				<a href=""><div class="btn2 kepl"><bm>Use Keplr</bm><i class="right"></i></div></a>
-				<a href=""><div class="btn2 lunie"><bm>Use Lunie</bm><i class="right"></i></div></a>
+				<a href=""><div class="btn2 lunie"><bm>Use COSMOSSTATION</bm><i class="right"></i></div></a>
 		</div>
 
 			</div>
@@ -80,7 +80,7 @@ layout: base
 				<div class="link2">
 			
 				<a href=""><div class="btn2 kepl"><bm>Use Keplr</bm><i class="right"></i></div></a>
-				<a href=""><div class="btn2 lunie"><bm>Use Lunie</bm><i class="right"></i></div></a>
+				<a href=""><div class="btn2 lunie"><bm>Use COSMOSSTATION</bm><i class="right"></i></div></a>
 			</div>
 			</div>
 
@@ -113,7 +113,7 @@ layout: base
 				<div class="link2">
 			
 				<a href=""><div class="btn2 kepl"><bm>Use Keplr</bm><i class="right"></i></div></a>
-				<a href=""><div class="btn2 lunie"><bm>Use Lunie</bm><i class="right"></i></div></a>
+				<a href=""><div class="btn2 lunie"><bm>Use COSMOSSTATION</bm><i class="right"></i></div></a>
 
 			</div>
 				</div>
@@ -147,7 +147,7 @@ layout: base
 				<div class="link2">
 			
 				<a href=""><div class="btn2 kepl"><bm>Use Keplr</bm><i class="right"></i></div></a>
-				<a href=""><div class="btn2 lunie"><bm>Use Lunie</bm><i class="right"></i></div></a>
+				<a href=""><div class="btn2 lunie"><bm>Use COSMOSSTATION</bm><i class="right"></i></div></a>
 
 			</div>
 				</div>
@@ -181,7 +181,7 @@ layout: base
 				<div class="link2">
 			
 				<a href=""><div class="btn2 kepl"><bm>Use Keplr</bm><i class="right"></i></div></a>
-				<a href=""><div class="btn2 lunie"><bm>Use Lunie</bm><i class="right"></i></div></a>
+				<a href=""><div class="btn2 lunie"><bm>Use COSMOSSTATION</bm><i class="right"></i></div></a>
 			</div>
 				</div>
 
