--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 		</a>
 	</div>
 	<div class="col-3">
-		<a class="connect" href="#" target="dialog">
+		<a class="connect" href="#" target="dialog1">
 		<div class="m1">
 			<div class="picture"></div>
 			<dt class="t5">Sunny<br><em>Aggarwal</em></dt><br><dt class="t6">Founder</dt>
@@ -58,7 +58,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 		</a>
 	</div>
 </div>
-<div class="dialog">
+<div class="dialog1">
 	<div class="dialog-inner">
 		<div class="dialog-container">
 			<div class="dialog-heading">
