--- a/about.html
+++ b/about.html
@@ -25,8 +25,9 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 		</div>
 		</a>
 	</div>
-	<div class="col-3">
-		<a class="connect" href="#" target="dialog1">
+	<div class="col-3"><td id="1">
+		<a class="connect" href="#" target="dialog">
+		</td>
 		<div class="m1">
 			<div class="picture"></div>
 			<dt class="t5">Sunny<br><em>Aggarwal</em></dt><br><dt class="t6">Founder</dt>
