--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 		</a>
 	</div>
 </div>
-<div class="dialog1">
+<div class="dialog" id="dialog1">
 	<div class="dialog-inner">
 		<div class="dialog-container">
 			<div class="dialog-heading">
