--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 <div class="team-main">
 	<h1>Team</h1>
 	<div class="col-3">
-		<a class="connect" href="#" name="a1" onClick="div_none('a1');">
+		<a class="connect" href="#" name="a1" onClick="div_none('dialog1');">
 		<div class="m1" >
 			<div class="picture"></div>
 			<dt class="t5">Sunny<br><em>Aggarwal</em></dt><br><dt class="t6">Founder</dt>
@@ -55,7 +55,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 	</div>
 
 </div>
-<div class="dialog1" style="display:none;" class="a1">
+<div class="dialog1" style="display:none;" >
 	<div class="dialog-inner">
 		<div class="dialog-container">
 			<div class="dialog-heading">
