--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 		</div>
 	</div>
 </div>
-<div class="dialog2" >
+<div class="dialog2" style="display:none;">
 	<div class="dialog-inner">
 		<div class="dialog-container">
 			<div class="dialog-heading">
@@ -135,7 +135,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 		</div>
 	</div>
 </div>
-<div class="dialog3" >
+<div class="dialog3" style="display:none;">
 	<div class="dialog-inner">
 		<div class="dialog-container">
 			<div class="dialog-heading">
@@ -177,7 +177,7 @@ He is trying hard to build more robust and secure software on blockchain using C
 		</div>
 	</div>
 </div>
-<div class="dialog4" >
+<div class="dialog4" style="display:none;">
 	<div class="dialog-inner">
 		<div class="dialog-container">
 			<div class="dialog-heading">
