--- a/about.html
+++ b/about.html
@@ -55,11 +55,11 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 	</div>
 
 </div>
-<div class="dialog1" style="display:none;" >
+<div class="dialog1" style="display:none;" onClick="div_none('dialog1');">
 	<div class="dialog-inner">
 		<div class="dialog-container">
 			<div class="dialog-heading">
-				<a class="close" href="javascript:web.dialog.close()">
+				<a class="close" href="#" >
 					<span></span>
 					<span></span>
 				</a>
@@ -181,7 +181,7 @@ He is trying hard to build more robust and secure software on blockchain using C
 	<div class="dialog-inner">
 		<div class="dialog-container">
 			<div class="dialog-heading">
-				<a class="close" href="javascript:web.dialog.close()">
+				<a class="close" href="#">
 					<span></span>
 					<span></span>
 				</a>
